--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.pchab.AndroidRTC"
+          package="fr.pchab.AndroidRTC"
           android:versionCode="1"
           android:versionName="1.0">
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <uses-sdk android:minSdkVersion="17"/>
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -16,7 +15,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="RTCActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape">
