--- a/webrtc-client/build.gradle
+++ b/webrtc-client/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -20,6 +20,6 @@ android {
 }
 
 dependencies {
-    compile 'com.github.nkzawa:socket.io-client:0.4.2'
-    compile 'io.pristine:libjingle:8871@aar'
+    implementation 'com.github.nkzawa:socket.io-client:0.4.2'
+    api 'io.pristine:libjingle:9127@aar'
 }
